Got downloads working, but need to work on getting preview to show

--- a/app/src/main/res/layout/file_downloader.xml
+++ b/app/src/main/res/layout/file_downloader.xml
@@ -24,7 +24,7 @@
         <ImageButton
             android:layout_width="?android:attr/actionBarSize"
             android:layout_height="?android:attr/actionBarSize"
-            android:id="@+id/download_and_save"
+            android:id="@+id/downloadButton"
             android:background="#00000000"
             android:src="@drawable/ic_action_search"
             android:layout_alignParentRight="true"
@@ -38,8 +38,8 @@
             android:textSize="22sp"
             android:id="@+id/report_search_input"
             android:textColor="@color/Black"
-            android:layout_toLeftOf="@+id/download_and_save"
-            android:layout_toStartOf="@+id/download_and_save"
+            android:layout_toLeftOf="@+id/downloadButton"
+            android:layout_toStartOf="@+id/downloadButton"
             android:padding="4dp"
             android:layout_gravity="center_vertical"
             android:layout_margin="4dp"
