--- a/app/src/main/res/layout/versioninfo_list.xml
+++ b/app/src/main/res/layout/versioninfo_list.xml
@@ -8,7 +8,7 @@
         android:layout_height="fill_parent"
         android:id="@+id/textView"
         android:textSize="16sp"
-        android:textColor="#0078c9"
+        android:textColor="@color/White"
         android:paddingTop="10dip"
         android:paddingBottom="10dip" />
 
