Added scrollview for the textview in preview fragment. Removed setting the title in MainActivity and Navigation Drawer. Removed a few styles that were no longer needed. Fixed linear layout settings for the instantiated listview items.

--- a/app/src/main/res/layout/fragment_image_preview.xml
+++ b/app/src/main/res/layout/fragment_image_preview.xml
@@ -12,12 +12,18 @@
         android:id="@+id/imageViewer"
         android:src="@drawable/sw_background" />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:id="@+id/text_scroll_view"
+        android:visibility="gone">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/textViewer"
-        android:visibility="gone"/>
+        android:padding="4dp"/>
+    </ScrollView>
 
     <com.joanzapata.pdfview.PDFView
         android:id="@+id/pdfViewer"
