--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
-    <!-- Light Theme -->
-    <style name="LightTheme"
+    <!-- Systemware Theme -->
+    <style name="SystemwareTheme"
         parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:actionBarItemBackground">@drawable/transparent_background</item>\>
@@ -14,14 +14,6 @@
         <item name="android:background">@drawable/actionbar_background</item>
         <item name="android:displayOptions">showHome|useLogo</item>
         <item name="displayOptions">showHome|useLogo</item>
-        <item name="android:titleTextStyle">@style/NoTitleText</item>
-        <item name="android:subtitleTextStyle">@style/NoTitleText</item>
-    </style>
-
-    <style name="NoTitleText">
-        <item name="android:textSize">0sp</item>
-        <item name="android:textColor">#00000000</item>
-        <item name="android:background">@drawable/actionbar_background</item>
     </style>
 
 
