--- a/app/src/main/res/layout/file_explorer_list.xml
+++ b/app/src/main/res/layout/file_explorer_list.xml
@@ -8,6 +8,5 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:divider="@color/WhiteSmoke"
-        android:dividerHeight="1dp"/>
+        android:divider="@color/WhiteSmoke"/>
 </LinearLayout>
